--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Discover the Beauty and History of Berwick Upon Tweed</h1>
         <p>Experience the charm of history, attractions, and events.</p>
         <button onclick="scrollToSection('history')">Learn More</button>
-        <button onclick="scrollToSection('livestream')">Live Stream</button>
+        <button onclick="scrollToSection('livestream')">Timelape</button>
     </section>
 
     <!-- History Section -->
@@ -41,15 +41,12 @@
 
     <!-- Live Stream Section -->
     <section id="livestream">
-        <h2>Live Stream of Berwick Town Center</h2>
+        <h2>Timelape of Berwick Town Center</h2>
         <div class="livestream-container">
-            <iframe src="https://g0.ipcamlive.com/player/player.php?alias=674a61a0c0711" 
-                width="800" 
-                height="450" 
-                frameborder="0" 
-                allowfullscreen
-                title="Live Stream of Berwick Town Center">
-            </iframe>
+            <video autoplay loop muted>
+                <source src="but.com-tl1.mp4" type="video/mp4">
+                Your browser does not support HTML video.
+            </video>
         </div>
     </section>
 
