--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <h2>Timelape of Berwick Town Center</h2>
         <div class="livestream-container">
             <video autoplay loop muted>
-                <source src="but.com-tl1.mp4" type="video/mp4">
+                <source src="https://berwick-upon-tweed.com/but.com-tl1.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
