--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <h1>Discover the Beauty and History of Berwick Upon Tweed</h1>
         <p>Experience the charm of history, attractions, and events.</p>
         <button onclick="scrollToSection('history')">Learn More</button>
-        <button onclick="scrollToSection('livestream')">Timelape</button>
+        <button onclick="scrollToSection('livestream')">Timelapes</button>
     </section>
 
     <!-- History Section -->
@@ -41,10 +41,10 @@
 
     <!-- Live Stream Section -->
     <section id="livestream">
-        <h2>Timelape of Berwick Town Center</h2>
+        <h2>Timelapes of Berwick Town Center</h2>
         <div class="livestream-container">
-            <video autoplay loop muted>
-                <source src="https://berwick-upon-tweed.com/but.com-tl1.mp4" type="video/mp4">
+            <video autoplay loop muted height="400" width="">
+                <source src="but.com-tl1.mp4" type="video/mp4">
                 Your browser does not support HTML video.
             </video>
         </div>
