--- a/live-stream.html
+++ b/live-stream.html
@@ -53,7 +53,7 @@
     <section id="livestream">
         <h2>View Live Streams</h2>
         <div class="livestream-container">
-            <iframe src="https://g0.ipcamlive.com/player/player.php?alias=674a61a0c0711" 
+            <iframe src="http://109.151.157.97:1024/video" 
                 width="800" 
                 height="450" 
                 frameborder="0" 
