--- a/index.html
+++ b/index.html
@@ -39,16 +39,17 @@
         </div>
     </section>
 
-    <!-- Live Stream Section -->
-    <section id="livestream">
-        <h2>Timelapes of Berwick Town Center</h2>
-        <div class="livestream-container">
-            <video autoplay loop muted height="400" width="">
-                <source src="but.com-tl1.mp4" type="video/mp4">
-                Your browser does not support HTML video.
-            </video>
-        </div>
-    </section>
+   <!-- Live Stream Section -->
+<section id="livestream">
+    <h2>Live Stream of Berwick Town Center</h2>
+    <div class="livestream-container">
+        <video autoplay loop muted>
+            <source src="but.com-tl1.mp4" type="video/mp4">
+            Your browser does not support HTML video.
+        </video>
+    </div>
+</section>
+
 
     <!-- Contact Section -->
     <section id="contact">
