--- a/index.html
+++ b/index.html
@@ -3,59 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Berwick Upon Tweed - Discover Our History</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="scripts.js" defer></script>
-
-    <meta name="description" content="Discover Berwick-upon-Tweed, a picturesque town on the border of England and Scotland, rich in history and culture.">
-
-    <!-- Open Graph Meta Tags for Social Media -->
-    <meta property="og:title" content="Berwick-upon-Tweed - A Charming Border Town">
-    <meta property="og:description" content="Discover Berwick-upon-Tweed, a picturesque town on the border of England and Scotland, rich in history and culture.">
-    <meta property="og:image" content="parallax.jpg">
-    <meta property="og:url" content="https://berwick-upon-tweed.com/">
-    <meta property="og:type" content="website">
-
-    <!-- Twitter Card Meta Tags -->
-    <meta name="twitter:card" content="image of berwick-upon-tweed town center clock tower town hall">
-    <meta name="twitter:title" content="Berwick-upon-Tweed - A Charming Border Town">
-    <meta name="twitter:description" content="Discover Berwick-upon-Tweed, a picturesque town on the border of England and Scotland, rich in history and culture.">
-    <meta name="twitter:image" content="parallax.jpg">
+    <title>Welcome to Berwick-upon-Tweed</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Hero Section -->
-    <section class="hero">
-        <h1>Discover the Beauty and History of Berwick Upon Tweed</h1>
-        <p>Experience the charm of history, attractions, and events.</p>
-        <button onclick="scrollToSection('history')">Learn More</button>
-        <button onclick="scrollToSection('livestream')">Timelapes</button>
-    </section>
+    <header>
+        <h1>Discover Berwick-upon-Tweed</h1>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="request-webcam.html">Request Webcam</a></li>
+                <li><a href="livestreams.html">Livestreams</a></li>
+                <li><a href="timelapses.html">Timelapses</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
+            </ul>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <h2>Welcome to the Historic Town of Berwick-upon-Tweed</h2>
+            <p>Located on the Scottish-English border, Berwick-upon-Tweed is the northernmost town in England, steeped in history and surrounded by breathtaking landscapes. Whether you're a history buff, nature lover, or simply looking for a picturesque getaway, Berwick has something for everyone.</p>
+        </section>
 
-    <!-- History Section -->
-    <section id="history" class="parallax">
-        <div class="content">
-            <h2>History</h2>
-            <p>Berwick Upon Tweed is a historic town that has changed hands between Scotland and England over 13 times, offering a rich cultural heritage.</p>
-        </div>
-    </section>
+        <section>
+            <h2>Why Visit Berwick-upon-Tweed?</h2>
+            <ul>
+                <li><strong>Rich History:</strong> Known for its tumultuous past, Berwick changed hands between England and Scotland 13 times before settling under English rule in 1482. The town is still surrounded by Elizabethan walls, a testament to its strategic importance.</li>
+                <li><strong>Stunning Scenery:</strong> Enjoy sweeping views of the River Tweed and the North Sea, as well as the beautiful beaches and countryside surrounding the town.</li>
+                <li><strong>Architectural Marvels:</strong> Visit iconic landmarks such as the Royal Border Bridge, designed by Robert Stephenson, and the Town Hall, built in the 18th century.</li>
+                <li><strong>Outdoor Activities:</strong> Take advantage of walking and cycling routes, including the Berwickshire Coastal Path and the Tweed Valley.</li>
+            </ul>
+        </section>
 
-   <!-- Live Stream Section -->
-<section id="livestream">
-    <h2>Live Stream of Berwick Town Center</h2>
-    <div class="livestream-container">
-        <video autoplay loop muted>
-            <source src="but.com-tl1.mp4" type="video/mp4">
-            Your browser does not support HTML video.
-        </video>
-    </div>
-</section>
+        <section>
+            <h2>Key Attractions</h2>
+            <article>
+                <h3>The Elizabethan Walls</h3>
+                <p>Berwick’s well-preserved walls were built during the reign of Queen Elizabeth I to defend the town from Scottish invasions. Walk along the walls to experience stunning views and a glimpse into the town’s storied past.</p>
+            </article>
+            <article>
+                <h3>Berwick Museum and Art Gallery</h3>
+                <p>Learn more about the town’s history and view fascinating exhibits, including the work of famous local artist L.S. Lowry, who frequently painted scenes of Berwick.</p>
+            </article>
+            <article>
+                <h3>Spittal Beach</h3>
+                <p>A popular spot for families, Spittal Beach offers golden sands, a promenade, and stunning views of the North Sea. Perfect for a leisurely day out or a brisk coastal walk.</p>
+            </article>
+        </section>
 
+        <section>
+            <h2>Planning Your Visit</h2>
+            <p>Berwick-upon-Tweed is accessible by road and rail, making it an easy destination for visitors. The town is a stop on the East Coast Main Line, with direct trains from London, Edinburgh, and Newcastle. If you’re driving, the A1 road connects Berwick to major cities in England and Scotland.</p>
+            <p>For more information on accommodations, dining, and events, visit the <a href="https://visitberwick.com" target="_blank">official tourism website</a>.</p>
+        </section>
 
-    <!-- Contact Section -->
-    <section id="contact">
-        <h2>Contact Us</h2>
-        <p>Email: <a href="mailto:info@berwick-upon-tweed.com">info@berwick-upon-tweed.com</a></p>
-        <p>Phone: <a href="tel:01289789632">01289 789632</a></p>
-    </section>
+        <section>
+            <h2>Stay Connected</h2>
+            <p>Explore Berwick's beauty live through our <a href="livestreams.html">livestreams</a> and enjoy stunning <a href="timelapses.html">timelapse videos</a>. Have a suggestion for a new webcam location? <a href="request-webcam.html">Let us know!</a></p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2024 Berwick-upon-Tweed Informational Website. All rights reserved.</p>
+        <p>Tel 01289 789632 | Email info@Berwick-upon-Tweed.com</p>
+    </footer>
 </body>
 </html>
