--- a/livestreams.html
+++ b/livestreams.html
@@ -25,8 +25,9 @@
         <iframe src="https://www.youtube.com/embed/live_stream?channel=YOUR_CHANNEL_ID" width="560" height="315" frameborder="0" allowfullscreen></iframe>
     </main>
     <footer>
-        <p>© 2024 Berwick-upon-Tweed Informational Website. All rights reserved.</p>
+        <p>&copy; 2024 Berwick-upon-Tweed Informational Website. All rights reserved.</p>
         <p>Tel 01289 789632 | Email info@Berwick-upon-Tweed.com</p>
+        <p><a href="sitemap.html">Sitemap</a></p>
     </footer>
 </body>
 </html>
