--- a/request-webcam.html
+++ b/request-webcam.html
@@ -48,6 +48,7 @@
     <footer>
         <p>&copy; 2024 Berwick-upon-Tweed Informational Website. All rights reserved.</p>
         <p>Tel 01289 789632 | Email info@Berwick-upon-Tweed.com</p>
+        <p><a href="sitemap.html">Sitemap</a></p>
     </footer>
 </body>
 </html>
