--- a/livestreams.html
+++ b/livestreams.html
@@ -22,7 +22,7 @@
     <main>
         <h2>Current Livestreams</h2>
         <p>Here are our active livestreams:</p>
-        <iframe src="https://www.youtube.com/embed/live_stream?channel=YOUR_CHANNEL_ID" width="560" height="315" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.vision-environnement.com/live/player/berwick0.php"  webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no" allow="autoplay; encrypted-media"></iframe>
     </main>
     <footer>
         <p>&copy; 2024 Berwick-upon-Tweed Informational Website. All rights reserved.</p>
