--- a/live-stream.html
+++ b/live-stream.html
@@ -53,13 +53,7 @@
     <section id="livestream">
         <h2>View Live Streams</h2>
         <div class="livestream-container">
-            <iframe src="http://109.151.157.97:1024/video" 
-                width="800" 
-                height="450" 
-                frameborder="0" 
-                allowfullscreen
-                title="Live Stream of Berwick Town Center">
-            </iframe>
+           <iframe src="https://www.vision-environnement.com/live/player/berwick0.php" allowfullscreen="true" webkitallowfullscreen="true" mozallowfullscreen="true" scrolling="no" allow="autoplay; encrypted-media"></iframe>
         </div>
         <br><br>
         <div class="livestream-container">
